--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "sale",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
-  },
+  "version": "1.0.0",
+  "description": "salestock test app",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "client": "cd client && yarn start",
+    "server": "nodemon server/server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/milebdo/sale.git"
+  },
+  "author": "ismail <is.tmdg86@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/milebdo/sale/issues"
+  },
+  "homepage": "https://github.com/milebdo/sale#readme"
 }
